Fix: Allowed word break to prevent clipping of long media titles on phones

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2126,6 +2126,7 @@ div[data-role=controlgroup] a.ui-btn-active {
 .layout-mobile .infoWrapper h1.parentName,
 .layout-mobile .infoWrapper h1.parentNameLast {
     font-size: 2.5em;
+    word-wrap: break-word;
 }
 
 #liveTvSuggestedPage,
